Fix the issue with collapsing categories in property grid, react V2

--- a/packages/survey-creator-core/src/property-grid-theme/blocks/spg-panel.scss
+++ b/packages/survey-creator-core/src/property-grid-theme/blocks/spg-panel.scss
@@ -41,7 +41,7 @@
 }
 
 .spg-panel__content {
-  display: flex !important;
+  //display: flex !important; todo: panels in react are not collapsed with this style
   flex-direction: column;
   align-items: flex-start;
   width: 100%;
